maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:16: error: identifier expected but integer literal found.
def whereWall():Int ={  \ le mur est : 5=devant, 1=gauche, 3=droite, 
                                       ^